--- a/app/contructors/logIn.html
+++ b/app/contructors/logIn.html
@@ -11,6 +11,6 @@
                 </div>
             </div>
             
-            <button type="submit" class="btn btn-primary" ng-click="login(uEmail,uPasssword)">כניסה</button>
+            <button type="submit" class="btn btn-primary" ng-click="login()">כניסה</button>
         </form>
     </main>
