--- a/app/distributors/distributors.html
+++ b/app/distributors/distributors.html
@@ -1,5 +1,5 @@
 <main>
-    <div class="mx-4 mt-3 mainTable">        
+    <div class="mx-4 mt-3 mainTable">
         <table class="table table-bordered table-hover">
             <thead>
                 <tr class="table-primary">
@@ -19,5 +19,9 @@
             </tbody>
         </table>
     </div>
-    <!-- <map /> -->
+    <!-- <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDj2_x8-Phi_rdxi2_UBOgDlOydfPEf2BU
+    &q=tel aviv" allowfullscreen>
+    </iframe> -->
+        <iframe width="600" height="450" frameborder="0" style="border:0" src={{address}} allowfullscreen>
+    </iframe>
 </main>
