before going home

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                     <ul id="menu-content" class="menu-content collapse out">
                         <li>
-                            <a href="/#!/dist">
+                            <a href="#!/dist">
                                     <i class="fa fa-list-ul"></i>
                                 <i class="">רשימת משווקים</i>
                             </a>
