--- a/app/contructors/login.html
+++ b/app/contructors/login.html
@@ -1,16 +1,20 @@
 <main>
-        <form class="mt-4 col-11">
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label for="inputEmail4">כתובת דוא"ל</label>
-                    <input type="email" class="form-control" id="inputEmail4" placeholder='כתובת דוא"ל' ng-model="uEmail">
+    <div class="row">
+            <div class="col-lg-3 p-lg-5 mt-4 mx-auto formbg">
+                <p class="text-center h6 pb-3"><u><a class="text-primary" ng-href="#!/signup">להרשמה</a></u></p>
+                <div class="form">
+                    <div class="form-group">
+                        <label for="inputEmail4">כתובת דוא"ל</label>
+                        <input type="email" class="form-control" id="inputEmail4" placeholder='כתובת דוא"ל' ng-model="uEmail">
+                        <label for="inputPassword4">סיסמה</label>
+                        <input type="password" class="form-control" id="inputPassword4" placeholder="סיסמה" ng-model="uPassword">
+                    </div>
+                    <div class="form-group col-md-6">
+
+                    </div>
                 </div>
-                <div class="form-group col-md-6">
-                    <label for="inputPassword4">סיסמה</label>
-                    <input type="password" class="form-control" id="inputPassword4" placeholder="סיסמה" ng-model="uPassword">
-                </div>
-            </div>
-            
-            <button type="submit" class="btn btn-primary" ng-click="login()">כניסה</button>
-        </form>
-    </main>
+
+                <button type="submit" class="btn btn-primary mx-auto" ng-click="login()">כניסה</button>   
+    </div>
+    </div>
+</main>
