--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#!/info">
                                 <i class="fa fa-info-circle"></i>
                                 <i class="">צור קשר</i>
                             </a>
