--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             </a>
                         </li>
                         <li ng-show="isLoggedIn()">
-                            <a href="#">
+                            <a href="#" target="_blank" onClick="window.open('./app/shared/pdf/pdf.pdf','קטלוג','resizable,height=500,width=600'); return false;">
                                 <i class="fa fa-file-pdf"></i>
                                 <i class="">קטלוג PDF</i>
                             </a>
