--- a/app/contructors/newOrder.html
+++ b/app/contructors/newOrder.html
@@ -112,6 +112,7 @@
         </form>
     </div>
     <div class="">
+        <button type="submit" class="btn btn-primary col-lg-2" ng-print print-element-id="printThisElement">הדפס הזמנה</button>
         <div id="ordetoprint">
             <div class="row">
                 <div class=" col-lg-11 mx-auto mt-4">
