--- a/app/home/info.html
+++ b/app/home/info.html
@@ -4,7 +4,7 @@
                         <h1 class="display-4">ביתקל בע"מ</h1>
                         <p class="lead">דוד שמעוני 8 הרצליה 4636708</p>
                         <p class="lead">טל: 050-2525045</p>
-                        <a href="mailto:nissim@bethkal.co.il">
+                        <a href="mailto:nissim@bethkal.co.il?subject=פנייה מהאתר">
                                 <p class="lead">שלח הודעה</p>
                         </a>
 
