--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,56 +1,62 @@
 <main>
-    <div class="mt-4">
-        <p class="text-center">
-            <img src="./app/shared/images/homePage.png" alt="">
-        </p>
-        <ul class="h4  mx-auto">
-            <li>מוצרי
-                <span class="font-weight-bold font-italic h3">ביתקל</span> נותנים פתרונות הצללה המשלבים את תריסי הרפפה עם יתרונותיהם במערכת אוטומטית נשלטת מרחוק.</li>
-            <li>יש לכם תריס רפפה פשוט? שדרגו בקלות לתריס חשמלי בלי לוותר על הנוחות, בלי חציבות, בלי ארגזי רוח בלי העברות קוי
-                חשמל.
-            </li>
-            <li>שליטה מכל טלפון אנדרואיד.</li>
-            <li>שיא הטכנולוגיה במזעור.</li>
-            <li>בית "ירוק" יותר מתמיד. חיסכון בעלויות קירור, חימום, חשמל.</li>
-        </ul>
-    
-    <div id="carouselExampleIndicators" class="carousel slide col-lg-7 mx-auto" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="./app/shared/images/homePage.png" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>תאור</h5>
-                    <p>הסבר קצר</p>
+    <div class="row">
+        <div class="col-lg-11 mx-auto  my-4">
+            <div class="mt-4">
+                <p class="text-center">
+                    <img src="./app/shared/images/homePage.png" alt="">
+                </p>
+                <ul class="h4  mx-auto">
+                    <li>מוצרי
+                        <span class="font-weight-bold font-italic h3">ביתקל</span> נותנים פתרונות הצללה המשלבים את תריסי הרפפה עם יתרונותיהם במערכת אוטומטית נשלטת מרחוק.</li>
+                    <li>יש לכם תריס רפפה פשוט? שדרגו בקלות לתריס חשמלי בלי לוותר על הנוחות, בלי חציבות, בלי ארגזי רוח בלי העברות
+                        קוי חשמל.
+                    </li>
+                    <li>שליטה מכל טלפון אנדרואיד.</li>
+                    <li>שיא הטכנולוגיה במזעור.</li>
+                    <li>בית "ירוק" יותר מתמיד. חיסכון בעלויות קירור, חימום, חשמל.</li>
+                </ul>
+
+                <div id="carouselExampleIndicators" class="carousel slide col-lg-7 mx-auto" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="./app/shared/images/homePage.png" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>תאור</h5>
+                                <p>הסבר קצר</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./app/shared/images/homePage.png" alt="Second slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>תאור</h5>
+                                <p>הסבר קצר</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./app/shared/images/homePage.png" alt="Third slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>תאור</h5>
+                                <p>הסבר קצר</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mb-4">
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="./app/shared/images/homePage.png" alt="Second slide">
-                <div class="carousel-caption d-none d-md-block">
-                        <h5>תאור</h5>
-                        <p>הסבר קצר</p>
-                    </div>
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="./app/shared/images/homePage.png" alt="Third slide">
-                <div class="carousel-caption d-none d-md-block">
-                        <h5>תאור</h5>
-                        <p>הסבר קצר</p>
-                    </div>
-            </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
-</div>
 </main>
