--- a/app/contructors/newOrder.html
+++ b/app/contructors/newOrder.html
@@ -1,7 +1,6 @@
 <main>
     <div class="formbg col-lg-11 mx-auto mt-4">
         <form class="pr-4 pt-4 align-right" name="orderForm">
-                <h1 ng-if="!orderForm.myInput.$valid">The input field cannot be empty</h1>
             <div class="row no-gutters">
                 <div class="col-lg-10">
                     <p class="h3">
@@ -13,7 +12,7 @@
             </div>
             <div class="row no-gutters">
                 <div class="form-group col-xl-3">
-                    <label for="pProfileType" class="h5">סוג תריס</label>
+                    <label for="pProfileType" class="h5">סוג פרופיל</label>
                     <select id="pProfileType" class="form-control " ng-model="pProfileType">
                         <option>פרופיל "בורג"</option>
                         <option>9000</option>
