--- a/app/contructors/orderList.html
+++ b/app/contructors/orderList.html
@@ -7,7 +7,7 @@
           <th>מספר הצעה</th>
           <th>תאריך</th>
           <th>הערות</th>
-          <th>cgkho</th>
+          <!-- <th>cgkho</th> -->
         </tr>
       </thead>
       <tbody>
@@ -15,7 +15,7 @@
           <td>{{x.oNumber.toUpperCase()}}</td>
           <td>{{x.oDateTime}}</td>
           <td>{{x.oRemarks}}</td>
-          <td>{{x.oOrderOwner}}</td>
+          <!-- <td>{{x.oOrderOwner}}</td> -->
         </tr>
 
       </tbody>
