--- a/app/contructors/signUp.html
+++ b/app/contructors/signUp.html
@@ -3,11 +3,11 @@
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label class="h5" for="inputEmail4">כתובת דוא"ל</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder='כתובת דוא"ל' ng-model="oEmail">
+                <input type="text" class="form-control" id="inputEmail4" placeholder='כתובת דוא"ל' ng-model="uEmail">
             </div>
             <div class="form-group col-md-6">
                 <label class="h5" for="inputPassword4">סיסמה</label>
-                <input type="password" class="form-control" id="inputPassword4" placeholder="סיסמה" ng-model="oPass">
+                <input type="password" class="form-control" id="inputPassword4" placeholder="סיסמה" ng-model="uPass">
             </div>
         </div>
         <div class=""> <!--d-none-->
@@ -17,17 +17,17 @@
                 </div>
                 <div class="form-group col-md-6">
                     <label class="h5" for="inputPassword42">חזור על הסיסמה</label>
-                    <input type="password" class="form-control" id="inputPassword42" placeholder="סיסמה" ng-model="oPass2"> 
+                    <input type="password" class="form-control" id="inputPassword42" placeholder="סיסמה" ng-model="uPass2"> 
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-3">
                     <label class="h5" for="inputFirstName">שם פרטי</label>
-                    <input type="text" class="form-control" id="inputFirstName" placeholder='שם'>
+                    <input type="text" class="form-control" id="inputFirstName" placeholder='שם' ng-model="uFname">
                 </div>
                 <div class="form-group col-md-4">
                     <label class="h5" for="inputLastName">שם משפחה</label>
-                    <input type="text" class="form-control" id="inputLastName" placeholder='משפחה'>
+                    <input type="text" class="form-control" id="inputLastName" placeholder='משפחה' ng-model="uLname">
                 </div>
                 <div class="form-group col-md-1">
 
@@ -35,35 +35,32 @@
 
                 <div class="form-group col-md-3">
                     <label class="h5" for="inputPhoneNum">טלפון נייד</label>
-                    <input type="text" class="form-control" id="inputPhoneNum" placeholder=''>
+                    <input type="text" class="form-control" id="inputPhoneNum" placeholder='' ng-model="uMobile">
                 </div>
                 <div class="form-group col-md-1">
                     <label class="h5" for="inputPhoneProvider">קידומת</label>
-                    <input type="text" class="form-control" id="inputPhoneProvider" placeholder=''>
+                    <input type="text" class="form-control" id="inputPhoneProvider" placeholder='' ng-model="uMobileArea">
                 </div>
 
             </div>
             <div class="form-group">
                 <label class="h5" for="inputAddress">כתובת</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="רחוב ומספר">
+                <input type="text" class="form-control" id="inputAddress" placeholder="רחוב ומספר" ng-model="uAddress">
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label class="h5" for="inputCity">עיר</label>
-                    <select id="inputCity" class="form-control">
-                        <option selected>בחר ...</option>
-                        <option>...</option>
-                    </select>
+                    <input type="text" class="form-control" id="inputCity" placeholder="עיר" ng-model="uCity">
                 </div>
                 <div class="form-group col-md-1">
 
                 </div>
                 <div class="form-group col-md-5">
                     <label class="h5" for="inputZip">מיקוד</label>
-                    <input type="text" class="form-control" id="inputZip">
+                    <input type="text" class="form-control" id="inputZip" placeholder="מיקוד" ng-model="uZip">
                 </div>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary mb-4">הרשמה</button>
+        <button type="submit" class="btn btn-primary mb-4" ng-click="createUser()">הרשמה</button>
     </form>
 </main>
