--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,6 +1,6 @@
 <main>
-    <div class="row">
-        <div class="col-lg-11 mx-auto  my-4">
+    <div class="row no-gutters">
+        <div class="col-lg-12 mx-auto  my-4">
             <div class="mt-4">
                 <p class="text-center">
                     <img src="./app/shared/images/homePage.png" alt="">
